--- a/Getting Started/Choose Your Calculus Adventure.ipynb
+++ b/Getting Started/Choose Your Calculus Adventure.ipynb
@@ -11,7 +11,11 @@
     "\n",
     "We want you to succeed, so make sure that you have the basic precalculus skills so you won't be frustrated! The first 4 pages test your readiness for this calculus class. If you aren't ready yet, don't worry, you can take this course later.\n",
     "\n",
-    "Some of you may already know a lot of calculus. To help you get started in the right place, we have further diagnostics. On pages 5 and 6, you can take the limits and derivatives diagnostics. We encourage you to take a look at these even if you don't know any calculus yet. But don't worry; we designed this course for people with varying backgrounds, including those with no calculus experience."
+    "Some of you may already know a lot of calculus. To help you get started in the right place, we have further diagnostics. On pages 5 and 6, you can take the limits and derivatives diagnostics. We encourage you to take a look at these even if you don't know any calculus yet. But don't worry; we designed this course for people with varying backgrounds, including those with no calculus experience.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -32,7 +36,11 @@
     "&=-2\n",
     "\\end{aligned}\n",
     "\n",
-    "Therefore, the slope of the line through the points $(3, -5)$ and $(1,-1)$ is $-2$."
+    "Therefore, the slope of the line through the points $(3, -5)$ and $(1,-1)$ is $-2$.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -51,6 +59,8 @@
     "x-3y=6\n",
     "\\end{aligned}\n",
     "\n",
+    "Represent the system of equations in augmented matrix form $(A|B)$.\n",
+    "\n",
     "$$\n",
     "\\begin{bmatrix}\n",
     "3 & 2 \\\\\n",
@@ -65,7 +75,144 @@
     "7 \\\\\n",
     "6\n",
     "\\end{bmatrix}\n",
+    "\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 2 & 7 \\\\\n",
+    "1 & -3 & 6\n",
+    "\\end{array}\n",
+    "\\right]\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a413cea",
+   "metadata": {},
+   "source": [
+    "Conduct row reduction until reduced row echelon form.\n",
+    "\n",
+    "$$\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 2 & 7 \\\\\n",
+    "1 & -3 & 6\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\n",
+    "\\hspace{-0.5em}\n",
+    "\\begin{array}{l}\n",
+    "\\\\\n",
+    "-3R_2 \\\\\n",
+    "\\end{array}\n",
+    "\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 2 & 7 \\\\\n",
+    "-3 & 9 & -18\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\n",
+    "\\hspace{-0.5em}\n",
+    "\\begin{array}{l}\n",
+    "\\\\\n",
+    "R_2 + R_1\\\\\n",
+    "\\end{array}\n",
+    "\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 2 & 7 \\\\\n",
+    "0 & 11 & -11\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\n",
+    "\\hspace{-0.5em}\n",
+    "\\begin{array}{l}\n",
+    "\\\\\n",
+    "\\frac{R_2}{11}\\\\\n",
+    "\\end{array}\n",
+    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e409542e",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 2 & 7 \\\\\n",
+    "0 & 1 & -1\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\n",
+    "\\hspace{-0.5em}\n",
+    "\\begin{array}{l}\n",
+    "R_1-2R_2\\\\\n",
+    "\\\\\n",
+    "\\end{array}\n",
+    "\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "3 & 0 & 9 \\\\\n",
+    "0 & 1 & -1\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "\n",
+    "\\hspace{-0.5em}\n",
+    "\\begin{array}{l}\n",
+    "\\frac{R_1}{3}\\\\\n",
+    "\\\\\n",
+    "\\end{array}\n",
+    "\n",
+    "\\to\n",
+    "\n",
+    "\\left[\n",
+    "\\begin{array}{cc|c}\n",
+    "1 & 0 & 3 \\\\\n",
+    "0 & 1 & -1\n",
+    "\\end{array}\n",
+    "\\right]\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e50298bd",
+   "metadata": {},
+   "source": [
+    "Since the matrix is in reduced row echelon form, it follows:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 \\\\\n",
+    "0 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "x \\\\\n",
+    "y\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "-1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Therefore, $x=3$ and $y=-1$."
    ]
   }
  ],
