--- a/Getting Started/Choose Your Calculus Adventure.ipynb
+++ b/Getting Started/Choose Your Calculus Adventure.ipynb
@@ -212,8 +212,41 @@
     "$$\n",
     "\n",
     "\n",
-    "Therefore, $x=3$ and $y=-1$."
+    "Therefore, $x=3$ and $y=-1$.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22b787a2",
+   "metadata": {},
+   "source": [
+    "**A3** Which of the following expressions is equivalent to $\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1}$?\n",
+    "\n",
+    "***Answer.***\n",
+    "First, we simplify the expression inside the parentheses:\n",
+    "\n",
+    "$$\n",
+    "\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1} = \\left( \\frac{y}{xy} + \\frac{x}{yx} \\right)^{-1}\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1} = \\frac{1}{\\frac{1}{x} + \\frac{1}{y}}\n",
+    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77b0d41",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
