--- a/Getting Started/Choose Your Calculus Adventure.ipynb
+++ b/Getting Started/Choose Your Calculus Adventure.ipynb
@@ -230,14 +230,7 @@
     "First, we simplify the expression inside the parentheses:\n",
     "\n",
     "$$\n",
-    "\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1} = \\left( \\frac{y}{xy} + \\frac{x}{yx} \\right)^{-1}\n",
-    "\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1} = \\frac{1}{\\frac{1}{x} + \\frac{1}{y}}\n",
+    "\\left( \\frac{1}{x} + \\frac{1}{y} \\right)^{-1} = \\left( \\frac{y}{xy} + \\frac{x}{xy} \\right)^{-1} = \\left( \\frac{x+y}{xy} \\right)^{-1}\n",
     "\n",
     "$$"
    ]
@@ -245,6 +238,42 @@
   {
    "cell_type": "markdown",
    "id": "a77b0d41",
+   "metadata": {},
+   "source": [
+    "Then, we can further simplify the expression by taking the inverse of the fraction:\n",
+    "\n",
+    "$$\n",
+    "\\left( \\frac{x+y}{xy} \\right)^{-1} = \\frac{1}{\\frac{x+y}{xy}} = \\frac{1}{\\frac{x+y}{xy}} \\cdot \\frac{xy}{xy}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec3dbe05",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "= \\frac{1\\cdot xy}{\\frac{(x+y) xy}{xy}} = \\frac{xy}{x+y}\n",
+    "$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f87f266",
+   "metadata": {},
+   "source": [
+    "**A4** List all possible solutions to the equation $x^3-x^2-2x=0$?\n",
+    "\n",
+    "***Answer.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ab1c67",
    "metadata": {},
    "source": []
   }
